Add RF repo API to validate local server certificates
